syntax = "proto3";

option go_package = "github.com/kazshinohara/cloudrun-handson/proto";

service Notification {
  rpc GetNotification (NotificationRequest) returns (stream NotificationReply) {}
}

message NotificationRequest {
  string event_name = 1;
}

message NotificationReply {
  string event_name = 1;
  string purchaser = 2;
  uint64 order_id = 3;
  uint64 item_id = 4;
}